add load and contract call tests
Signed-off-by: Daniel Ivanov <daniel.k.ivanov95@gmail.com>